[package]
authors = ['Metaverse Developers <https://metaverse.network>']
build = 'build.rs'
description = 'A decentralised world powered by economy.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'metaverse-node'
repository = 'https://github.com/bit-country/Metaverse-Network/'
version = '0.0.15'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[[bin]]
name = "metaverse-node"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
serde = { version = "1.0.140", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.4"
log = "0.4.17"
clap = { version = "4.2.4", features = ["derive"] }
parking_lot = "0.12.1"
async-trait = "0.1"
jsonrpsee = { version = "0.16.2", features = ["server"] }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["jemalloc-global"] }
url = "2.3.1"
tracing-core = "0.1.28"


sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
#sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
#sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true }

# Metaverse related dependencies
primitives = { package = "bit-country-primitives", path = "../primitives/metaverse" }
metaverse-runtime-common = { version = "0.0.1", path = "../runtime/common", optional = true }
metaverse-runtime = { version = "0.0.60", path = "../runtime/metaverse", optional = true }
pioneer-runtime = { version = "0.0.7", path = "../runtime/pioneer", optional = true }
continuum-runtime = { version = "0.0.7", path = "../runtime/continuum", optional = true }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-minimal-node = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-rpc-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.38" }

# EVM dependencies
fp-rpc = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fp-consensus = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fp-storage = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-cli = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-rpc = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-rpc-core = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-consensus = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-mapping-sync = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
fc-db = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }

pallet-dynamic-fee = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }
pallet-ethereum = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38", optional = true }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }


[features]
default = ["with-metaverse-runtime"]

with-metaverse-runtime = [
    "metaverse-runtime-common",
    "metaverse-runtime",
    "fc-consensus",
    "fc-cli",
    "fc-db",
    "fc-mapping-sync",
    "fc-rpc",
    "fc-rpc-core",
    "fp-consensus",
    "fp-rpc",
    "fp-storage",
    "pallet-dynamic-fee",
    "pallet-ethereum",
]

with-pioneer-runtime = [
    "pioneer-runtime",
]

with-continuum-runtime = [
    "continuum-runtime",
]

runtime-benchmarks = [
    "polkadot-service/runtime-benchmarks",
    "metaverse-runtime/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
]
